--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,5 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Check unath file change
+        run: |
+          git diff --name-only origin/main...HEAD | grep -v terraform.tfvars | grep -q .
+          if [ $? -eq 0 ]; then 
+            echo "Unauth file change..Exiting"
+          fi
