--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check unath file change
         run: |
-          git diff --name-only origin/main...HEAD | grep -v terraform.tfvars | grep -q .
+          git diff --name-only origin/main...HEAD | grep terraform.tfvars
           if [ $? -eq 0 ]; then 
             echo "Unauth file change..Exiting"
           fi
