--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check unath file change
         run: |
-          git diff --name-only origin/main...HEAD | grep terraform.tfvars
-          if [ $? -eq 0 ]; then 
-            echo "Unauth file change..Exiting"
+          if [[ $(git diff --name-only HEAD^ HEAD | grep terraform.tfvars ]]; then
+            echo "Chaing terraform.tfvars file"
           fi
