--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check unath file change
         run: |
-          if [[ $(git diff --name-only HEAD^ HEAD | grep terraform.tfvars ]]; then
+          if [[ $(git diff --name-only HEAD^ HEAD | grep terraform.tfvars) ]]; then
             echo "Chaing terraform.tfvars file"
           fi
