--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,10 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ github.event.changes.files[0].filename == 'terraform.tfvars' }}
     steps:
       - uses: actions/checkout@v4
       - name: Check unath file change
         run: |
-          if [[ $(git diff --name-only HEAD^ HEAD | grep terraform.tfvars) ]]; then
             echo "Chaing terraform.tfvars file"
-          fi
