--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check unath file change
         run: | 
-          if: ${{ github.event.changes.files[0].filename == 'terraform.tfvars' }}
+          if [ $(github.event.changes.files[0].filename == 'terraform.tfvars') ]
             echo "Chaing terraform.tfvars file"
           fi
